smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters1.smithy
// Parse error at line 3, column 12 near `{`: Unexpected EOF
namespace com.foo
map MyMap {
